make jobs async and non-blocking
